=== 0.0.0 ===
2008-04-06  Pascal Volk  <neverseen@users.sourceforge.net>

	* install.sh: Removed $PF_GID
	* INSTALL: Added hints for pyPgSQL and smtpd_recipient_restrictions
	* update_config_0.3.x-0.4.py:
	* upgrade.sh:
	* UPGRADE: Added to repository
	* VirtualMailManager/VirtualMailManager.py (VirtualMailManager.__init__):
	Don't call VirtualMailManager.__chkenv() if vmm is started with
	option configure.
	* VirtualMailManager/VirtualMailManager.py (VirtualMailManager.__chkenv):
	Added value for placeholder in error message.

2008-03-05  Pascal Volk  <neverseen@users.sourceforge.net>

	* create_tables.pgsql: Removed unneeded newlines from views dovecot_user and
	postfix_uid
	* update_tables_0.2.x-0.3.pgsql: Removed from repository
	* update_tables_0.3.x-0.4.py: Added to repository

2008-03-04  Pascal Volk	 <neverseen@users.sourceforge.net>

	* VirtualMailManager/Alias.py:
	* VirtualMailManager/VirtualMailManager.py:
	* vmm: Now it's possible to delete an alias with a specific destination

2008-03-03  Pascal Volk  <neverseen@users.sourceforge.net>

	* pgsql-virtual_mailbox_domains.cf: Added to repository
	* INSTALL: fixed postfix docu

2008-03-02  Pascal Volk  <neverseen@users.sourceforge.net>

	* create_tables.pgsql: Added view vmm_domain_info
	* VirtualMailManager/Alias.py: Removed attribute Alias._aid
	Removed parameter basedir from Alias.__init__() and Alias._setAddr()
	* VirtualMailManager/MailLocation.py: Fixed typo in MailLocation.__init__()
	* VirtualMailManager/Account.py: Integrated Transport- and
	MailLocation-stuff
	Removed attributes: Account._base and Account._home
	* VirtualMailManager/VirtualMailManager.py: some small fixes
	* VirtualMailManager/Domain.py: Added Transport-stuff
	* vmm.cfg: Added option transport in section misc
	* pgsql-transport.cf: changed query for new table layout
	* pgsql-smtpd_sender_login_maps.cf: added missing single quote in query

2008-02-02  Pascal Volk  <neverseen@users.sourceforge.net>
