@@ -3,7 +3,13 @@ If you have installed vmm 0.3.x you have to proceed this steps:
     * stop Postfix and Dovecot
     * backup/dump your database.
     * backup/dump your database!
-    * execute update_0.3.x-0.4.sh
+    * execute upgrade.sh
+    * set permissions for replaced views:
+        GRANT SELECT ON dovecot_user TO your_dovecot_dbuser;
+        GRANT SELECT ON postfix_transport TO your_postfix_dbuser;
+    * update user_query in /etc/dovecot/dovecot-sql.conf:
+        user_query = \
+            SELECT home, uid, gid, mail FROM dovecot_user WHERE userid='%u'
     * edit the pgsql parameters hosts, user, password and dbname in:
         $(postconf -h config_directory)/pgsql-smtpd_sender_login_maps.cf
         $(postconf -h config_directory)/pgsql-transport.cf
